# moonlight-common-rust

./: .gitignore  Cargo.toml  Cross.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
bindings/: Cargo.toml  README.md
bindings/src/: lib.rs
examples/: README.md  client-common-c.rs  client-simple.rs  client-stream.rs  client-tokio.rs  common.rs  simple-client.rs
examples/client-stream/: Cargo.toml
examples/common/: gstreamer_audio.rs  gstreamer_video.rs  mod.rs
moonlight-common-sys/: Cargo.toml  build.rs  crypto.h  limelight.h
moonlight-common-sys/src/: lib.rs
src/: high.rs  lib.rs  mac.rs  openssl.rs  pair.rs  test.rs
src/crypto/: disabled.rs  mod.rs  openssl.rs  rustcrypto.rs
src/high/: mod.rs  std.rs  tokio.rs
src/http/: app_list.rs  box_art.rs  cancel.rs  helper.rs  host_info.rs  launch.rs  mod.rs  pair.rs  request_client.rs  resume.rs  server_info.rs  test.rs  unpair.rs
src/http/backend/: curl.rs  hyper_openssl.rs  mod.rs  reqwest.rs
src/http/client/: async_client.rs  awc.rs  blocking_client.rs  hyper.rs  mod.rs  reqwest.rs  reqwest_blocking.rs  tokio_hyper.rs  ureq.rs
src/http/pair/: client.rs  mod.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  test.rs
src/network/: launch.rs  mod.rs  pair.rs  request_client.rs
src/network/backend/: reqwest.rs
src/stream/: audio.rs  control.rs  debug.rs  mod.rs  video.rs
src/stream/c/: audio.rs  bindings.rs  connection.rs  mod.rs  video.rs
src/stream/proto/: enet.rs  mod.rs  packet.rs
src/stream/proto/audio/: depayloader.rs  mod.rs  packet.rs  payloader.rs  test.rs
src/stream/proto/control/: encryption.rs  mod.rs  packet.rs
src/stream/proto/crypto/: mod.rs  test.rs
src/stream/proto/microphone/: mod.rs
src/stream/proto/microphone/apollo/: mod.rs
src/stream/proto/rtsp/: client.rs  encryption.rs  mod.rs  moonlight.rs  packet.rs  raw.rs  test.rs
src/stream/proto/sdp/: client.rs  server.rs
src/stream/proto/test/: mod.rs
src/stream/proto/video/: depayloader.rs  mod.rs  payloader.rs  test.rs
src/stream/proto/video/nal/: h264.rs  h265.rs  mod.rs
src/stream/std/: mod.rs  ringbuffer.rs
