[workspace]
package.version = "0.1.0"
package.license = "GPL-3.0-or-later"
members = ["./", "moonlight-common-sys", "examples/*"]

[workspace.dependencies]
moonlight-common = { path = "./" }
moonlight-common-sys = { path = "./moonlight-common-sys" }

openssl-sys = { version = "0.9.109", default-features = false }
openssl = { version = "0.10.73", default-features = false }

[workspace.lints.clippy]
too_many_arguments = "allow"
unwrap_used = "warn"

[package]
name = "moonlight-common"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.9.1"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

log = "0.4.29"

thiserror = "2.0.18"

uuid = { version = "0.8.2", features = ["v4"] }
hex = "0.4.3"
url = { version = "2.5.8" }
roxmltree = { version = "0.21.1" }
form_urlencoded = { version = "1.2.2" }

# Stream Proto
# We need to use this fork because the normal version doesn't allow us to use a custom parity matrix
reed-solomon-erasure = { git = "https://github.com/MrCreativ3001/reed-solomon-erasure", rev = "e8b2f49d54118f69927254f83fff05830a601017" }

# Stream c
moonlight-common-sys = { workspace = true, optional = true }

# Reqwest
reqwest = { version = "0.12.28", default-features = false, optional = true }
bytes = { version = "1.11.1", optional = true }

# Tokio
tokio = { version = "1.49.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
], optional = true }
pem = { version = "3.0.6", optional = true }

# OpenSSL
openssl = { workspace = true, optional = true }

# Serde Serialization
serde = { version = "1.0.228", features = ["derive"], optional = true }

# Proto
# TODO: make this optional
rusty_enet = "0.4.0"

[features]
default = ["stream_std"]

# Stream implementations
stream_c = ["dep:moonlight-common-sys"]
stream_std = []

# implementation for other libraries
openssl = ["dep:openssl"]

reqwest = ["dep:reqwest", "dep:bytes"]
tokio = ["dep:tokio"]

serde = ["dep:serde"]

[lints]
workspace = true
