[workspace]
package.version = "0.1.0"
package.license = "GPL-3.0-or-later"
members = ["./", "moonlight-common-sys"]

[workspace.dependencies]
moonlight-common = { path = "./" }
moonlight-common-sys = { path = "./moonlight-common-sys" }

openssl-sys = "0.9.109"
openssl = "0.10.73"

[workspace.lints.clippy]
too_many_arguments = "allow"
unwrap_used = "warn"

[package]
name = "moonlight-common"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.9.1"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"

log = "0.4.29"

thiserror = "2.0.18"

# TODO: should the v4 feature for random be used?
uuid = { version = "0.8.2", features = ["v4"] }
hex = "0.4.3"
url = "2.5.8"
pem = "3.0.6"
roxmltree = "0.21.1"
form_urlencoded = "1.2.2"

# Stream Proto
# We need to use this fork because the normal version doesn't allow us to use a custom parity matrix
reed-solomon-erasure = { git = "https://github.com/MrCreativ3001/reed-solomon-erasure", rev = "e8b2f49d54118f69927254f83fff05830a601017" }
rusty_enet = "0.4.0"

# Stream c
moonlight-common-sys = { workspace = true, optional = true }

# Reqwest
reqwest = { version = "0.13.2", features = [
    "rustls",
], default-features = false, optional = true }

# Tokio
# TODO: only pick needed features, maybe also behind a feature lock
tokio = { version = "1.49.0", default-features = false, features = [
    "full",
], optional = true }

# OpenSSL
openssl = { workspace = true, optional = true }

# serde serialization for some types
serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
default = ["reqwest-blocking", "std"]

serde = ["dep:serde"]

# Different "runtimes"
std = []
tokio = ["dep:tokio"]

# Stream implementations
stream-c = ["dep:moonlight-common-sys"]

# Crypto implementations
openssl = ["dep:openssl"]
# TODO: rustcrypto
rustcrypto = []

# Request implementations
reqwest = ["dep:reqwest"]
# TODO: implement reqwest blocking
reqwest-blocking = ["dep:reqwest", "reqwest/blocking"]

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }

# openssl version above this version don't compile in cross-rs (x86_64-pc-windows-gnu)
# See https://github.com/openssl/openssl/issues/29818
openssl-sys = { version = "=0.9.109" }

[[example]]
name = "client-pair"
path = "examples/client-pair.rs"
required-features = ["reqwest-blocking", "rustcrypto"]

[[example]]
name = "client-stream"
path = "examples/client-stream.rs"
required-features = ["reqwest-blocking", "std", "rustcrypto"]

[[example]]
name = "client-common-c"
path = "examples/client-common-c.rs"
required-features = ["reqwest-blocking", "stream-c"]

[[example]]
name = "client-tokio"
path = "examples/client-tokio.rs"
required-features = ["reqwest", "tokio", "openssl"]
