[package]
name = "client-stream"
edition = "2024"
version.workspace = true
license.workspace = true

[dependencies]
moonlight-common = { workspace = true, features = ["stream_std"] }

# openssl version above this version don't compile in cross-rs
# See https://github.com/openssl/openssl/issues/29818
openssl-sys = { version = "=0.9.109", features = ["vendored"] }
openssl-src = { version = "=300.5.4" }

[lints]
workspace = true
